--- a/trunk/WEB-INF/classes/USIP_OSCW_Properties_en_US.properties
+++ b/trunk/WEB-INF/classes/USIP_OSCW_Properties_en_US.properties
@@ -34,12 +34,12 @@ uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 ###################################################################
 # For local testing
 
-base_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\
-base_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\simulation_section_information\\
-custom_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\custom_section_libraries\\
-actor_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\oscw_core\\images\\actor\\
-packaged_sim_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\simulation_sharing\\packaged_simulations\\
-sim_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\simulation_dev\\simulation\\images\\
+base_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\
+base_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation_section_information\\
+custom_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\custom_section_libraries\\
+actor_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\oscw_core\\images\\actor\\
+packaged_sim_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
+sim_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation\\images\\
 
 conn_string_local=jdbc:mysql://localhost:3306/test?user=skip&password=brock_s
 
@@ -52,6 +52,6 @@ port_local=3306
 
 dialect_local=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_local=com.mysql.jdbc.Driver
-simulation_url_local=http://localhost:8080/simulation_dev/simulation/index.jsp
+simulation_url_local=http://localhost:8080/usip_osp/simulation/index.jsp
 #uploads_local=uploads
 uploads_local=C:\\apache\\apache-tomcat-5.5.26\\work\\Catalina\\bin\\uploads\\
