--- a/WEB-INF/classes/USIP_OSCW_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSCW_Properties_en_US.properties
@@ -33,13 +33,13 @@ uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 
 ###################################################################
 # For local testing
-
-base_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\
-base_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation_section_information\\
-custom_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\custom_section_libraries\\
-actor_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\oscw_core\\images\\actor\\
-packaged_sim_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
-sim_image_dir_local=C:\\apache\\apache-tomcat-5.5.26\\webapps\\usip_osp\\simulation\\images\\
+# Note, I have to keep switching for 26 and 27. I want to set an APACHE_HOME variable to C:\apache\apache-tomcat-5.5.27
+base_web_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\
+base_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\simulation_section_information\\
+custom_section_web_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\custom_section_libraries\\
+actor_image_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\oscw_core\\images\\actor\\
+packaged_sim_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
+sim_image_dir_local=C:\\apache\\apache-tomcat-5.5.27\\webapps\\usip_osp\\simulation\\images\\
 
 conn_string_local=jdbc:mysql://localhost:3306/test?user=skip&password=brock_s
 
@@ -54,4 +54,4 @@ dialect_local=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_local=com.mysql.jdbc.Driver
 simulation_url_local=http://localhost:8080/usip_osp/simulation/index.jsp
 #uploads_local=uploads
-uploads_local=C:\\apache\\apache-tomcat-5.5.26\\work\\Catalina\\bin\\uploads\\
+uploads_local=C:\\apache\\apache-tomcat-5.5.27\\work\\Catalina\\bin\\uploads\\
