--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -20,7 +20,7 @@ sim_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulat
 
 conn_string_remote=jdbc:mysql://localhost:3306/test?user=peacepla&password=F73v-Mp4c
 
-principalschema_remote=usiposcw
+principalschema_remote=usiposp
 username_remote=peacepla
 password_remote=F73v-Mp4c
 loc_remote=jdbc:mysql://localhost:
@@ -43,8 +43,8 @@ sim_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation\\images\\
 
 conn_string_local=jdbc:mysql://localhost:3306/test?user=skip&password=brock_s
 
-principalschema_local=usiposcw
-schema_local=usiposcw
+principalschema_local=usiposp
+schema_local=usiposp
 username_local=root
 password_local=brock_s
 loc_local=jdbc:mysql://localhost:
