--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -25,6 +25,7 @@ username_remote=peacepla
 password_remote=F73v-Mp4c
 loc_remote=jdbc:mysql://localhost:
 port_remote=3306
+osp_admin_email_remote=me@skipcole.com
 
 dialect_remote=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_remote=com.mysql.jdbc.Driver
@@ -49,6 +50,7 @@ username_local=root
 password_local=brock_s
 loc_local=jdbc:mysql://localhost:
 port_local=3306
+osp_admin_email_local=me@skipcole.com
 
 dialect_local=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_local=com.mysql.jdbc.Driver
