--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -27,6 +27,16 @@ loc_remote=jdbc:mysql://localhost:
 port_remote=3306
 osp_admin_email_remote=me@skipcole.com
 
+######################################
+email_archive_address_remote=usiposp@hotmail.com
+email_smtp_remote=peaceplatform.org
+schema_organization_remote=USIP
+smtp_auth_password_remote=F73v-Mp4c
+smtp_auth_user_remote=peacepla
+password_remote=F73v-Mp4c
+username_remote=peacepla
+#######################################
+
 dialect_remote=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_remote=com.mysql.jdbc.Driver
 simulation_url_remote=http://dev.peaceplatform.org/simulation/
