--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -14,7 +14,7 @@
 base_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/
 base_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_section_information/
 custom_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/custom_section_libraries/
-actor_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/osp_core/images/actor/
+actor_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/osp_core/images/actors/
 packaged_sim_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_sharing/packaged_simulations/
 sim_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation/images/
 
@@ -44,11 +44,11 @@ uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 
 ###################################################################
 # For local testing
-# Note, I have to keep switching for 26 and 26. I want to set an APACHE_HOME variable to C:\apache\tomcat
+# Note, We want eventually to set an APACHE_HOME variable to C:\apache\tomcat
 base_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\
 base_section_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_section_information\\
 custom_section_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\custom_section_libraries\\
-actor_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\osp_core\\images\\actor\\
+actor_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\osp_core\\images\\actors\\
 packaged_sim_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
 sim_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation\\images\\
 
@@ -67,3 +67,10 @@ driver_class_local=com.mysql.jdbc.Driver
 simulation_url_local=http://localhost:8080/usip_osp/simulation/index.jsp
 #uploads_local=uploads
 uploads_local=C:\\apache\\tomcat\\work\\Catalina\\bin\\uploads\\
+
+###########################################################################333
+unittest_principalschema_local=usiposp
+unittest_schema_local=usiposp
+unittest_username_local=root
+unittest_password_local=brock_s
+
