--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -39,7 +39,7 @@ username_remote=peacepla
 
 dialect_remote=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_remote=com.mysql.jdbc.Driver
-simulation_url_remote=http://dev.peaceplatform.org/simulation/
+simulation_url_remote=http://dev.opensimplatform.org/simulation/
 uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 
 ###################################################################
