--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -10,6 +10,7 @@
 #environment_name=_remote
 
 ##################################################################
+##################################################################
 # For remote testing
 base_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/
 base_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_section_information/
@@ -27,6 +28,8 @@ loc_remote=jdbc:mysql://localhost:
 port_remote=3306
 osp_admin_email_remote=me@skipcole.com
 
+wipe_database_key_remote=remote
+
 ######################################
 email_archive_address_remote=usiposp@hotmail.com
 email_smtp_remote=peaceplatform.org
@@ -43,6 +46,7 @@ base_sim_url_remote=http://dev.opensimplatform.org/
 simulation_url_remote=http://dev.opensimplatform.org/simulation/
 uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 
+##################################################################
 ###################################################################
 # For local testing
 # Note, We want eventually to set an APACHE_HOME variable to C:\apache\tomcat
@@ -62,6 +66,8 @@ password_local=brock_s
 loc_local=jdbc:mysql://localhost:
 port_local=3306
 osp_admin_email_local=me@skipcole.com
+
+wipe_database_key_local=local
 
 dialect_local=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_local=com.mysql.jdbc.Driver
