--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -9,12 +9,15 @@
 #environment_name=_local
 #environment_name=_remote
 
+release=0.0.4
+next_planned_outage=This system will be down the night of March 8th for Release 0.0.4.
+
 ##################################################################
 ##################################################################
 # For remote testing
 base_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/
 base_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_section_information/
-custom_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/custom_section_libraries/
+model_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_model_information/
 actor_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/osp_core/images/actors/
 packaged_sim_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_sharing/packaged_simulations/
 sim_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation/images/
@@ -52,7 +55,7 @@ uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 # Note, We want eventually to set an APACHE_HOME variable to C:\apache\tomcat
 base_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\
 base_section_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_section_information\\
-custom_section_web_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\custom_section_libraries\\
+model_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_model_information\\
 actor_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\osp_core\\images\\actors\\
 packaged_sim_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
 sim_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation\\images\\
@@ -73,7 +76,6 @@ dialect_local=org.hibernate.dialect.MySQLInnoDBDialect
 driver_class_local=com.mysql.jdbc.Driver
 base_sim_url_local=http://localhost:8080/usip_osp/
 simulation_url_local=http://localhost:8080/usip_osp/simulation/index.jsp
-#uploads_local=uploads
 uploads_local=C:\\apache\\tomcat\\work\\Catalina\\bin\\uploads\\
 
 ###########################################################################333
