--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -9,8 +9,8 @@
 #environment_name=_local
 #environment_name=_remote
 
-release=0.0.4
-next_planned_outage=This system will be down the night of March 8th for Release 0.0.4.
+release=0.0.5
+next_planned_outage=None
 
 ##################################################################
 ##################################################################
