--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties
@@ -8,8 +8,8 @@
 #environment_name=_local
 #environment_name=_remote
 
-release=0.0.5
-next_planned_outage=None
+release=0.0.6
+next_planned_outage=Night of August 2 (Morning of August 3) 2009
 
 ##################################################################
 # For remote testing
