--- a/trunk/WEB-INF/classes/UILanguageObject_es_US.properties
+++ b/trunk/WEB-INF/classes/UILanguageObject_es_US.properties
@@ -1,17 +1,23 @@
 USIP=USIP
 open_simulation_platform=Open Simulation Platform
+USIP_OSP_HEADER=USIP Open Simulation Platform
+
+login=Login
 username=Nombre de Usuario
 password=Contraseña
 forgot_password=¿Olvidó su contraseña?
 register=Registro
 upcoming_planned_outage=
 acknowledgements=
-organization=
+organization=Organización
 simulation=Simulation
 session=Seción
 your_role=Tu Papel
 play=Entrar
 phase=Etapa
-logout=Cierre de Sesión
+logout=SALIR
 scenario=Escenario
-my_profile=Mi Perfil
+my_profile=MI PERFIL
+welcome=Bienvenido
+below_are=Below are simulations assigned to you by an instructor: 
+select_from=Seleccione entre las siguientes
