--- a/WEB-INF/classes/UILanguageObject_en_US.properties
+++ b/WEB-INF/classes/UILanguageObject_en_US.properties
@@ -1,5 +1,8 @@
 USIP=USIP
 open_simulation_platform=Open Simulation Platform
+USIP_OSP_HEADER=USIP Open Simulation Platform
+
+login=Login
 username=User Name
 password=Password
 forgot_password=Forgot Password
@@ -12,6 +15,9 @@ session=Session
 your_role=Your Role
 play=Play
 phase=Phase
-logout=Logout
+logout=LOGOUT
 scenario=Scenario
-my_profile=My Profile
+my_profile=MY PROFILE
+welcome=Welcome
+below_are=Below are simulations assigned to you by an instructor: 
+select_from=Select from the Following
