Work done on internationalization.

--- a/WEB-INF/classes/UILanguageObject_es_US.properties
+++ b/WEB-INF/classes/UILanguageObject_es_US.properties
@@ -1,6 +1,6 @@
 USIP=USIP
 open_simulation_platform=Open Simulation Platform
-USIP_OSP_HEADER=USIP Open Simulation Platform
+USIP_OSP_HEADER=USIP Plataforma Abierta de Simulación
 
 login=Login
 username=Nombre de Usuario
