--- a/trunk/WEB-INF/classes/UILanguageObject_en_US.properties
+++ b/trunk/WEB-INF/classes/UILanguageObject_en_US.properties
@@ -20,4 +20,4 @@ scenario=Scenario
 my_profile=MY PROFILE
 welcome=Welcome
 below_are=Below are simulations assigned to you by an instructor: 
-select_from=Select from the Following
+select_region_of_program_to_enter=Select the region of the USIP OSP that you want to enter.
