--- a/WEB-INF/classes/UILanguageObject_es_US.properties
+++ b/WEB-INF/classes/UILanguageObject_es_US.properties
@@ -20,4 +20,4 @@ scenario=Escenario
 my_profile=MI PERFIL
 welcome=Bienvenido
 below_are=Below are simulations assigned to you by an instructor: 
-select_from=Seleccione entre las siguientes
+select_region_of_program_to_enter=Select the region of the USIP OSP that you want to enter.
